# LoFTune

./: LICENSE  README.rst
data/biomedicine/: covid_entities_50_subset_test.txt  covid_entities_50_subset_train.txt  covid_entities_50_subset_val.txt  covid_entities_subset_test_questions.json
data/covidqa_bio/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/freshQA/: FreshQA_v03172025 - freshqa.csv
data/insurance/: test_entities.txt  test_entities_questions_dataset.json  train_entities.txt  validation_entities.txt
data/insuranceQA/: dataset_info.json  state.json
estimators/common/: extract_claims.py  generate_preferences_dataset.py  generate_questions_dataset.py  prepare_sft_data.py  sample_model_vllm.py
estimators/factscore/: README.md  factscorer.py  factscorer_dpo.py  factscorer_es.py  factscorer_es_dpo.py  insurance-en-entities-definitions.yml  insurance-en-new_distribution_test-entities-synonyms-hypernyms.yml  insurance-en-new_distribution_train_dev-entities-no-expansion.yml  insurance-en-new_distribution_train_dev-entities-synonyms-hypernyms.yml  pyproject.toml  requirements.txt  service_config.ini  wikipedia_search.py
estimators/factscore/factscore/: clm.py  factscorer.py  lm.py  openai_lm.py
estimators/factscore/prompts/: wikipedia_search_prompt.txt
estimators/judge_based/: basic_utils.py  judge_based.py  llm_api_call.py  llms.py
estimators/model_confidence/: answer_questions_vllm.py  claims_to_questions.py  truthfulness_score.py
training/: NOTICE  dpo_llama2.py  dpo_pythia.py  sft_llama2.py  sft_pythia.py
(+26 files in other folders)
